--- a/src/app/components/nav-auth/nav-auth.component.html
+++ b/src/app/components/nav-auth/nav-auth.component.html
@@ -15,7 +15,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav align-items-center">
               <li class="nav-item">
-                  <a class="nav-link fw-bold" >Home</a>
+                  <a class="nav-link fw-bold" routerLink="home" >Home</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link fw-bold"  routerLink="search"><i class="bi bi-search"></i> Search</a>
