--- a/src/app/features/searchpage/components/search-input/search-input.component.html
+++ b/src/app/features/searchpage/components/search-input/search-input.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container my-4">
     <div class="row justify-content-center">
         <div class="col-12 col-md-8 col-lg-6">
             <div class="input-group  ">
