--- a/src/app/components/nav-auth/nav-auth.component.html
+++ b/src/app/components/nav-auth/nav-auth.component.html
@@ -27,7 +27,7 @@
                   <a class="nav-link fw-bold" routerLink="Contactus">Contact Us</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link fw-bold" >Cart</a>
+                  <a class="nav-link fw-bold" routerLink="cart">Cart</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link fw-bold" routerLink="/signin" style="cursor: pointer;"><i class="bi bi-person"></i> Login</a>
