--- a/src/app/features/searchpage/components/search-input/search-input.component.html
+++ b/src/app/features/searchpage/components/search-input/search-input.component.html
@@ -4,9 +4,12 @@
             <div class="input-group  ">
                 <span class="input-group-text  border-0 bg-transparent">
                     <svg width="32" height="33" viewBox="0 0 32 33" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M14.3333 28.5367C21.6971 28.5367 27.6667 22.5671 27.6667 15.2033C27.6667 7.83953 21.6971 1.87 14.3333 1.87C6.96954 1.87 1 7.83953 1 15.2033C1 22.5671 6.96954 28.5367 14.3333 28.5367Z" stroke="#666363" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M31 31.87L23.75 24.62" stroke="#666363" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>                        
+                        <path
+                            d="M14.3333 28.5367C21.6971 28.5367 27.6667 22.5671 27.6667 15.2033C27.6667 7.83953 21.6971 1.87 14.3333 1.87C6.96954 1.87 1 7.83953 1 15.2033C1 22.5671 6.96954 28.5367 14.3333 28.5367Z"
+                            stroke="#666363" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                        <path d="M31 31.87L23.75 24.62" stroke="#666363" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                    </svg>
                 </span>
                 <input type="text" class="form-control p-3" placeholder="Search for items..." aria-label="Search" />
             </div>
