--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -71,7 +71,7 @@
               <img src="assets/images/fb999226995e85e2230a890fbfc5fbde.png" alt="" style="width: 50px;">
             </div>
               <h4 class="color-serv-sec" style="font-family: Georgia, 'Times New Roman', Times, serif;font-size: 30px;">Medicine Recommendation Chat</h4>
-              <p class="color-serv-sec">This service provides users with the ability to describe the symptoms they are experiencing via a dedicated chat. The system analyzes the entered symptoms and makes recommendations of appropriate drug names based on the description provided. In addition, the service displays the nearest pharmacies that provide the suggested medications</p>
+              <p class="color-serv-sec">This service provides users with the ability to describe the symptoms they are experiencing via a dedicated chat. The system analyzes the entered symptoms and makes recommendations</p>
           </div>
       </div>
   </div>
