--- a/src/app/components/nav-auth/nav-auth.component.html
+++ b/src/app/components/nav-auth/nav-auth.component.html
@@ -21,7 +21,15 @@
                   <a class="nav-link fw-bold"  routerLink="search"><i class="bi bi-search"></i> Search</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link fw-bold" >Category</a>
+                <li class="nav-item dropdown text-center ">
+                  <a  class="nav-link dropdown-toggle fw-bold justify-content-center" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Category
+                    </a>
+                    <ul class="dropdown-menu bg-transparent text-center border-0" aria-labelledby="navbarDropdown">
+                      <li routerLink="category"><a class="dropdown-item fw-bold" >Category1</a></li>
+                      <li routerLink="category"><a class="dropdown-item fw-bold" >Category2</a></li>
+                      <li routerLink="category"><a class="dropdown-item fw-bold" >Category3</a></li>
+                    </ul>
               </li>
               <li class="nav-item">
                   <a class="nav-link fw-bold" routerLink="Contactus">Contact Us</a>
