--- a/src/app/features/searchpage/components/search-input/search-input.component.html
+++ b/src/app/features/searchpage/components/search-input/search-input.component.html
@@ -1,7 +1,7 @@
 <div class="container my-4">
     <div class="row justify-content-center">
         <div class="col-12 col-md-8 col-lg-6">
-            <div class="input-group  ">
+            <div class="input-group  p-0 rounded-3">
                 <span class="input-group-text  border-0 bg-transparent">
                     <svg width="32" height="33" viewBox="0 0 32 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
